--- a/Text-Prediction-Model---Data-Processing.html
+++ b/Text-Prediction-Model---Data-Processing.html
@@ -486,7 +486,7 @@ News
 </div>
 <div id="data-sampling" class="section level2">
 <h2>Data Sampling</h2>
-<p>Since the dataset is so large, and due to hardware constrains, we will be using the 15% of the total data. We will join this subsets into one <em>coropra</em> and divide them to create three data sets: the <strong>training set</strong>, <strong>validation set</strong> and the <strong>test set</strong>. As a good practice, we will use the 70% of the <em>corpora</em> as our <strong>training set</strong>, 20% for our <strong>validation set</strong> and the other 10% as our <strong>test set</strong>.</p>
+<p>Since the dataset is so large, and due to hardware constrains, we will be using the 15% of the total data. We will join this subsets into one <em>corpora</em> and divide them to create three data sets: the <strong>training set</strong>, <strong>validation set</strong> and the <strong>test set</strong>. As a good practice, we will use the 70% of the <em>corpora</em> as our <strong>training set</strong>, 20% for our <strong>validation set</strong> and the other 10% as our <strong>test set</strong>.</p>
 <p>For practicity we will create separte testing, validation and training files for each one of the <strong>Twitter</strong>, <strong>Blogs</strong> and <strong>News</strong> data sets.</p>
 <div id="twitter-files" class="section level4">
 <h4>Twitter files</h4>
